database types: ignore knex migrations

--- a/database/types/export-types-config.json
+++ b/database/types/export-types-config.json
@@ -6,5 +6,9 @@
   "useNullAsDefault": true,
   "filename": "./database/types/database-types",
   "tableNameCasing": "pascal",
-  "template": "./database/types/template.handlebars"
+  "template": "./database/types/template.handlebars",
+  "excludedTables": [
+    "main.knex_migrations",
+    "main.knex_migrations_lock"
+  ]
 }
