--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "format": "npx prettier . --check",
+    "format:fix": "npx prettier . --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "db:migrations:create": "knex migrate:make",
     "db:migrations:migrate": "knex migrate:latest && npm run db:export-types",
     "db:migrations:rollback": "knex migrate:rollback && npm run db:export-types",
     "db:export-types": "npx @rmp135/sql-ts -c ./database/types/export-types-config.json"
   },
   "dependencies": {
-    "@nuxt/eslint": "^0.6.0",
     "@primevue/themes": "^4.2.0",
-    "@rmp135/sql-ts": "^2.1.0",
     "better-sqlite3": "^9.6.0",
     "knex": "^3.1.0",
     "normalize.css": "^8.0.1",
@@ -27,10 +29,13 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^0.6.1",
     "@primevue/nuxt-module": "^4.2.0",
+    "@rmp135/sql-ts": "^2.1.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3",
-    "sass-embedded": "^1.80.4"
+    "prettier": "3.3.3",
+    "sass-embedded": "^1.80.4",
+    "typescript": "^5.6.3"
   }
 }
