prettier fix all, eslint custom rules, migrations update, database types update, fontawesome

--- a/database/types/export-types-config.json
+++ b/database/types/export-types-config.json
@@ -7,8 +7,5 @@
   "filename": "./database/types/database-types",
   "tableNameCasing": "pascal",
   "template": "./database/types/template.handlebars",
-  "excludedTables": [
-    "main.knex_migrations",
-    "main.knex_migrations_lock"
-  ]
+  "excludedTables": ["main.knex_migrations", "main.knex_migrations_lock"]
 }
