--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "db:export-types": "npx @rmp135/sql-ts -c ./database/types/export-types-config.json"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/themes": "^4.2.0",
     "better-sqlite3": "^9.6.0",
     "knex": "^3.1.0",
     "normalize.css": "^8.0.1",
     "nuxt": "^3.13.2",
-    "primeicons": "^7.0.0",
     "primevue": "^4.2.0",
     "vue": "latest",
     "vue-router": "latest"
