--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "format": "npx prettier . --check",
-    "format:fix": "npx prettier . --write",
+    "format": "prettier . --check",
+    "format:fix": "prettier . --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "db:migrations:create": "knex migrate:make",
-    "db:migrations:migrate": "knex migrate:latest && npm run db:export-types",
-    "db:migrations:rollback": "knex migrate:rollback && npm run db:export-types",
-    "db:export-types": "npx @rmp135/sql-ts -c ./database/types/export-types-config.json"
+    "db:migrations:create": "kysely migrate:make",
+    "db:migrations:migrate": "kysely migrate:latest && npm run db:export-types",
+    "db:migrations:rollback": "kysely migrate:rollback && npm run db:export-types",
+    "db:export-types": "kysely-codegen --url=./database/quiz_database.sqlite --out-file=./database/types.d.ts && eslint ./database/types.d.ts --fix && prettier ./database/types.d.ts --write"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -23,7 +23,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/themes": "^4.2.0",
     "better-sqlite3": "^9.6.0",
-    "knex": "^3.1.0",
+    "kysely": "^0.27.4",
     "normalize.css": "^8.0.1",
     "nuxt": "^3.13.2",
     "primevue": "^4.2.0",
@@ -33,9 +33,10 @@
   "devDependencies": {
     "@nuxt/eslint": "^0.6.1",
     "@primevue/nuxt-module": "^4.2.0",
-    "@rmp135/sql-ts": "^2.1.0",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
+    "kysely-codegen": "^0.17.0",
+    "kysely-ctl": "^0.9.0",
     "prettier": "3.3.3",
     "sass-embedded": "^1.80.4",
     "typescript": "^5.6.3"
