--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pub-quiz-24",
+  "name": "pubquiz-24",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,22 +11,18 @@
     "format": "prettier . --check",
     "format:fix": "prettier . --write",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "db:migrations:create": "kysely migrate:make",
-    "db:migrations:migrate": "kysely migrate:latest && npm run db:export-types",
-    "db:migrations:rollback": "kysely migrate:rollback && npm run db:export-types",
-    "db:export-types": "kysely-codegen --url=./database/quiz_database.sqlite --out-file=./database/types.d.ts && eslint ./database/types.d.ts --fix && prettier ./database/types.d.ts --write"
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@primevue/themes": "^4.2.0",
-    "better-sqlite3": "^9.6.0",
-    "kysely": "^0.27.4",
     "normalize.css": "^8.0.1",
     "nuxt": "^3.13.2",
     "primevue": "^4.2.0",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -35,8 +31,6 @@
     "@primevue/nuxt-module": "^4.2.0",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
-    "kysely-codegen": "^0.17.0",
-    "kysely-ctl": "^0.9.0",
     "prettier": "3.3.3",
     "sass-embedded": "^1.80.4",
     "typescript": "^5.6.3"
