--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.7.0",
     "@primevue/themes": "^4.2.0",
+    "@spotify/web-api-ts-sdk": "^1.2.0",
+    "gsap": "^3.12.5",
     "normalize.css": "^8.0.1",
     "nuxt": "^3.13.2",
     "primevue": "^4.2.0",
