added working fullscreen action, isUpdating changed in stores, needs to be after it's actually updated, toast plugin is not needed, TODO for entry button, added working audio for question

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@pinia/nuxt": "^0.7.0",
     "@primevue/themes": "^4.2.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
+    "audiomotion-analyzer": "^4.5.0",
     "gsap": "^3.12.5",
     "normalize.css": "^8.0.1",
     "nuxt": "^3.13.2",
