--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "start": "node get-network-ip.js && node .output/server/index.mjs",
+    "start": "node get-network-ip.js && npm run preview",
     "postinstall": "nuxt prepare",
     "format": "prettier . --check",
     "format:fix": "prettier . --write",
