--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pubquiz-24",
-  "private": true,
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "build": "nuxt build",
